# ava

./: README.md  pyproject.toml
api/: pyproject.toml
api/src/: __init__.py  __main__.py  config.py
api/src/models/: confluence.py
bot/: app.py  bot.py  config.py
migrations/: env.py
migrations/versions/: 42654fbfccd5_initial_migration.py
src/: __init__.py  __main__.py  config.py  discord_bot.py  middlewares.py  processMeeting.py  prompts.py  routes.py
src/agent/: __init__.py  agent.py  prompt.py  tools.py
src/bot/: main.py
src/db/: __init__.py  dao.py  schema.py
src/models/: agent.py  confluence.py  feedback.py  feedbackresponse.py  meeting.py  personalityprofile.py  promptmodels.py  responsemodel.py  summary.py  team.py  transcript.py  users.py
src/prompts/: prompt.py
src/routes/: bot.py  bot_routes.py  confluence_routes.py  test_transcript.py
src/service/: channel_info.json  drive_start_token.json  driver_poler.py  gd_webhook.py  info.txt  page_token.json  secrets.json  temp.py  token.json  unzip_functions.py  webhook_handler.py
src/service/transcriptdownloads/: info.txt  transcription.txt
