[project]
name = "ava"
version = "0.1.0"
description = "AVA (Agile Virtual Assistant)"
authors = [
    {name = "Julien Coulombe-Morency",email = "hello@juliencm.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13 <4.0"
dependencies = [
    "fastapi (>=0.121.2,<0.122.0)",
    "pydantic-ai (>=1.18.0,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "botbuilder-core (>=4.17.0,<5.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "greenlet (>=3.2.4,<4.0.0)",
    "google-auth (>=2.15.0,<2.42.0)",
    "google-api-python-client (>=2.187.0,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "google-auth-oauthlib (>=1.2.3,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "discord-py (>=2.6.4,<3.0.0)",
    "discord (>=2.3.2,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ava"
version = "0.1.0"
packages = [{ include = "src" }]

[tool.pyright]
venvPath = "."
venv = ".venv"
